fixed errors, added gap message, turned logo to link

--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,16 @@ h2 {
   background-color: white;
 }
 
+.experience-gap {
+  margin: 2rem auto;
+  width: 50%;
+  padding: 1rem;
+  box-shadow: 5px 5px 20px #d3e3e8;
+  border-radius: 10%;
+  max-width: 85%;
+  background-color: white;
+}
+
 @media (max-width: 776px) {
   .experience-card {
     max-width: 96%;
@@ -213,9 +223,13 @@ h2 {
     padding-left: 20px;
     padding-right: 20px;
   }
+  .skill-section {
+    padding: 0.7rem 2.7rem;
+    margin: 1.5rem 0;
+  }
 }
 
-@media (max-width: 625px) {
+@media (max-width: 665px) {
   .nav-wide {
     display: none;
   }
@@ -223,6 +237,12 @@ h2 {
   .nav-narrow {
     display: block;
   }
+
+  .skill-section {
+    padding: 0.1rem 0.7rem;
+    margin: 1.5rem 0;
+  }
+
 }
 
 .section-container {
@@ -235,10 +255,10 @@ h2 {
   /* background: red; */
 }
 
-.skill-section {
+/* .skill-section {
   padding: 0.7rem 2.7rem;
   margin: 1.5rem 0;
-}
+} */
 
 .skill-section h3 {
   margin-bottom: 1rem;
